[package]
name = "kalz_websocket_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
futures-util = "0.3"
tokio-tungstenite = "0.18.0"
# futures = "0.3.28"
# futures-util = "0.3.28"
# tokio = { version = "1.28.0", features = ["full"] }
# tokio-tungstenite = "0.18.0"
# tokio-util = "0.7.8"
# tungstenite = "0.19.0"
